# BeaconHost

./: .gitignore  LICENSE  README.md  build-release.bat  index.html  package-lock.json  package.json  upload-windows-release.bat
.github/workflows/: release-linux.yml  release.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  process.rs  providers.rs  state.rs
src-tauri/src/commands/: backups.rs  content.rs  downloads.rs  files.rs  java.rs  mod.rs  network.rs  optimize.rs  players.rs  properties.rs  servers.rs  settings.rs
src/components/: AnimatedBackground.tsx  ContentBrowser.tsx  CreateServerModal.tsx  FirewallPanel.tsx  Sidebar.tsx  SplashScreen.tsx  StatusBadge.tsx  TitleBar.tsx  ui.tsx
src/i18n/: ar.json  en.json  index.ts
src/lib/: api.ts  events.ts  firewallSetup.ts
src/pages/: Dashboard.tsx  Network.tsx  ServerView.tsx
src/pages/server/: Backups.tsx  Console.tsx  Files.tsx  Mods.tsx  Network.tsx  Performance.tsx  Players.tsx  Plugins.tsx  Settings.tsx
src/store/: servers.ts
src/theme/: tokens.ts
