[package]
name = "minc"
version = "0.1.0"
description = "BeaconHost - Minecraft Server Manager"
authors = ["BeaconHost"]
edition = "2021"

[lib]
name = "minc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
zip = "2"
flate2 = "1"
tar = "0.4"
sysinfo = "0.33"
sha2 = "0.10"
md-5 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
walkdir = "2"

[profile.release]
lto = "thin"
opt-level = "s"
codegen-units = 16
